--- a/components/footer/Footer.module.scss
+++ b/components/footer/Footer.module.scss
@@ -55,7 +55,7 @@
       font-weight: 600;
       font-size: 16px;
       line-height: 24px;
-      color: #666;
+      color: rgb(61, 60, 60);
       font-family: "Inter", sans-serif;
       font-style: italic;
     }
