feedback form added

--- a/common/topicsList/TopicsList.module.scss
+++ b/common/topicsList/TopicsList.module.scss
@@ -84,6 +84,7 @@
 
   .topicsList_items_list {
     padding: 0px 8px;
+    height: 80px;
     justify-content: flex-start;
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: -ms-autohiding-scrollbar;
