--- a/common/feedback/Feedback.module.scss
+++ b/common/feedback/Feedback.module.scss
@@ -35,6 +35,7 @@
           padding: 8px;
           font-size: 14px;
           font-weight: 500;
+          background-color: #fff;
           line-height: 24px;
           color: #666;
           font-family: "Inter", sans-serif;
@@ -50,6 +51,7 @@
           border-radius: 4px;
           padding: 8px;
           font-size: 14px;
+          background-color: #fff;
           font-weight: 500;
           line-height: 24px;
           resize: none;
