--- a/components/header/Header.module.scss
+++ b/components/header/Header.module.scss
@@ -20,7 +20,6 @@
     align-items: center;
     justify-content: space-between;
     font-family: "Inter", sans-serif;
-    // left side
     .header_container_left {
       display: flex;
       align-items: center;
@@ -29,6 +28,7 @@
         font-size: 30px;
         font-weight: 800;
         cursor: pointer;
+        color: #000;
       }
       .header_menu {
         display: flex;
