added sanity to nextjs

--- a/common/modal/style.module.scss
+++ b/common/modal/style.module.scss
@@ -16,7 +16,7 @@
       background-color: #f5f5f5;
     }
     .modal_icon {
-      border-radius: 50%;
+      object-fit: contain;
     }
     .modal_box_title {
       font-size: 42px;
