--- a/common/blogModal/style.module.scss
+++ b/common/blogModal/style.module.scss
@@ -5,14 +5,11 @@
     align-items: center;
     border-radius: 4px;
     padding: 24px;
-    box-shadow: 0 0 0 1px rgb(0 0 0 / 7%), 0 2px 4px rgb(0 0 0 / 5%),
-      0 12px 24px rgb(0 0 0 / 5%);
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     transition: all 0.2s ease-in-out;
-    gap: 16px;
     &:hover {
-      box-shadow: 0 0 0 1px rgb(0 0 0 / 7%), 0 2px 4px rgb(0 0 0 / 5%),
-        0 12px 24px rgb(0 0 0 / 10%);
-      background-color: #f5f5f5;
+      box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+      transform: scale(1.004);
     }
     .modal_icon {
       border-radius: 4px;
