--- a/common/modal/style.module.scss
+++ b/common/modal/style.module.scss
@@ -7,13 +7,11 @@
     gap: 32px;
     border-radius: 4px;
     padding: 24px;
-    box-shadow: 0 0 0 1px rgb(0 0 0 / 7%), 0 2px 4px rgb(0 0 0 / 5%),
-      0 12px 24px rgb(0 0 0 / 5%);
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     transition: all 0.2s ease-in-out;
     &:hover {
-      box-shadow: 0 0 0 1px rgb(0 0 0 / 7%), 0 2px 4px rgb(0 0 0 / 5%),
-        0 12px 24px rgb(0 0 0 / 10%);
-      background-color: #f5f5f5;
+      box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+      transform: scale(1.004);
     }
     .modal_icon {
       object-fit: contain;
@@ -35,8 +33,8 @@
       margin-top: 24px;
       padding: 16px 42px;
       border-radius: 4px;
-      font-size: 16px;
-      font-weight: 600;
+      font-size: 15px;
+      font-weight: 500;
       background: #202123;
       color: #fff;
       cursor: pointer;
