--- a/components/dashboard/featureMachineCoding/MachineCodingList.module.scss
+++ b/components/dashboard/featureMachineCoding/MachineCodingList.module.scss
@@ -51,13 +51,12 @@
       height: auto;
       background-color: #fff;
       border-radius: 8px;
-      box-shadow: 0 0 0 1px rgb(0 0 0 / 7%), 0 2px 4px rgb(0 0 0 / 5%),
-        0 12px 24px rgb(0 0 0 / 5%);
-      transition: all 0.8s ease-in-out;
+      border-radius: 4px;
+      box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+      transition: all 0.2s ease-in-out;
       &:hover {
-        box-shadow: 0 0 0 1px rgb(0 0 0 / 7%), 0 2px 4px rgb(0 0 0 / 5%),
-          0 12px 24px rgb(0 0 0 / 10%);
-        background-color: #f5f5f5;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        transform: scale(1.004);
       }
       padding: 16px;
       cursor: pointer;
@@ -68,7 +67,7 @@
       .machineCodingList__container__list__item__question {
         font-size: 16px;
         font-weight: 400;
-        color: #000000;
+        color: #333;
         font-family: "Inter", sans-serif;
         margin-bottom: 8px;
       }
