--- a/components/dashboard/topSection/TopSection.module.scss
+++ b/components/dashboard/topSection/TopSection.module.scss
@@ -14,12 +14,11 @@
     font-family: "Roboto", sans-serif;
   }
   .topSection_description {
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 400;
     text-align: center;
-    font-family: "Roboto", sans-serif;
+    font-family: "Inter", sans-serif;
     color: #666;
-    padding: 0px 72px;
   }
   .topSection_btn_list {
     display: flex;
