--- a/components/machineCodingRoundQuestion/FrontEndCodingQuestions.module.scss
+++ b/components/machineCodingRoundQuestion/FrontEndCodingQuestions.module.scss
@@ -18,13 +18,11 @@
       height: auto;
       background-color: #fff;
       border-radius: 4px;
-      box-shadow: 0 0 0 1px rgb(0 0 0 / 7%), 0 2px 4px rgb(0 0 0 / 5%),
-        0 12px 24px rgb(0 0 0 / 5%);
-      transition: all 0.8s ease-in-out;
+      box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+      transition: all 0.2s ease-in-out;
       &:hover {
-        box-shadow: 0 0 0 1px rgb(0 0 0 / 7%), 0 2px 4px rgb(0 0 0 / 5%),
-          0 12px 24px rgb(0 0 0 / 10%);
-        background-color: #f5f5f5;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        transform: scale(1.004);
       }
       padding: 32px;
       cursor: pointer;
