--- a/common/codeSnippet/CodeSnippet.module.scss
+++ b/common/codeSnippet/CodeSnippet.module.scss
@@ -7,5 +7,16 @@
     height: 100%;
     width: 100%;
     border-radius: 4px;
+    max-height: 550px;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+    ::-webkit-scrollbar {
+      width: 4px;
+    }
+    ::-webkit-scrollbar-thumb {
+      background-color: #d9dbdc;
+      color: #d9dbdc;
+      border-radius: 6px;
+    }
   }
 }
