--- a/common/tabView/Style.module.scss
+++ b/common/tabView/Style.module.scss
@@ -4,33 +4,37 @@
   .tabView__container {
     width: 100%;
     height: 100%;
+    background-color: #161b22;
+    border: 1px solid #30363d;
+    border-radius: 4px;
     .tabView__container__header {
       width: 100%;
-      height: 52px;
       display: flex;
       align-items: center;
       justify-content: space-between;
-      background: #1d1f21;
+      background-color: #161b22;
       border-radius: 4px;
-      border: 2px solid #fff;
-      padding: 6px 8px;
+      border: 1px solid #30363d;
+      padding: 16px 8px;
+      padding-bottom: 0px;
       .tabView__container__header_left {
         display: flex;
         align-items: center;
         gap: 4px;
       }
       .tabView__container__header__tab {
-        padding: 6px 16px;
+        padding: 8px 16px;
+        padding-bottom: 6px;
         font-size: 16px;
+        border-radius: 4px;
         font-weight: 400;
-        color: #fff;
+        color: #6e7681;
         font-family: "Inter", sans-serif;
         cursor: pointer;
-        background: #525761;
       }
       .tabView__container__header__tab_active {
-        background: #949498;
-        border-top: 2px solid #fff;
+        background: #0d1117;
+        color: #fff;
       }
     }
     .tabView__container__content__result {
@@ -41,6 +45,11 @@
       justify-content: center;
       border: 2px solid rgb(18, 16, 16);
       border-radius: 4px;
+    }
+  }
+  .tabView__container__content {
+    pre {
+      background-color: #161b22 !important;
     }
   }
 }
