--- a/common/blogModal/style.module.scss
+++ b/common/blogModal/style.module.scss
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
     border-radius: 4px;
+    gap: 12px;
     padding: 24px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     transition: all 0.2s ease-in-out;
@@ -26,7 +27,7 @@
       -webkit-box-orient: vertical;
     }
     .modal_box_description {
-      font-size: 16px;
+      font-size: 15px;
       font-weight: 400;
       color: #666;
       font-family: "Inter", sans-serif;
