--- a/common/codeSnippet/CodeSnippet.module.scss
+++ b/common/codeSnippet/CodeSnippet.module.scss
@@ -12,10 +12,10 @@
     scroll-behavior: smooth;
     ::-webkit-scrollbar {
       width: 4px;
+      height: 4px;
     }
     ::-webkit-scrollbar-thumb {
-      background-color: #d9dbdc;
-      color: #d9dbdc;
+      background: #bdc0c1;
       border-radius: 6px;
     }
   }
