--- a/styles/globals.css
+++ b/styles/globals.css
@@ -79,7 +79,7 @@ code {
 pre {
   border-radius: 3px;
   padding: 1.2rem !important;
-  background: #1d1f21 !important;
+  background-color: #161b22 !important;
 }
 
 pre p {
