adding medium level questions

--- a/components/footer/Footer.module.scss
+++ b/components/footer/Footer.module.scss
@@ -50,6 +50,8 @@
     cursor: pointer;
     .header_container_right_item_coffee {
       border-radius: 4px;
+      background-color: white;
+      padding: 4px;
     }
     .footer_buy_me_coffee_title {
       font-weight: 600;
