--- a/common/codeSnippet/CodeSnippet.module.scss
+++ b/common/codeSnippet/CodeSnippet.module.scss
@@ -10,12 +10,10 @@
     max-height: 550px;
     overflow-y: scroll;
     scroll-behavior: smooth;
+    -ms-overflow-style: none; /* IE 11 */
+    scrollbar-width: none; /* Firefox 64 */
     ::-webkit-scrollbar {
-      width: 4px;
-      height: 4px;
       display: none;
-      width: 0px;
-      height: 0px;
     }
     ::-webkit-scrollbar-thumb {
       display: none;
