--- a/common/tabView/Style.module.scss
+++ b/common/tabView/Style.module.scss
@@ -15,8 +15,7 @@
       background-color: #161b22;
       border-radius: 4px;
       border: 1px solid #30363d;
-      padding: 16px 8px;
-      padding-bottom: 0px;
+      padding: 8px;
       .tabView__container__header_left {
         display: flex;
         align-items: center;
