--- a/components/readBlog/ReadBlog.module.scss
+++ b/components/readBlog/ReadBlog.module.scss
@@ -32,11 +32,25 @@
       }
     }
     .readBlog_container_content {
-      font-size: 18px;
+      font-size: 15px;
       font-weight: 400;
       font-family: "Inter", sans-serif;
       line-height: 1.5;
       color: #000;
+      strong {
+        font-weight: 700;
+        font-size: 18px;
+        font-family: "Roboto", sans-serif;
+      }
+      b {
+        font-weight: 700;
+        font-size: 18px;
+        font-family: "Roboto", sans-serif;
+      }
+      ul {
+        list-style: disc;
+        padding-left: 24px;
+      }
     }
   }
 }
