--- a/components/dashboard/topSection/TopSection.module.scss
+++ b/components/dashboard/topSection/TopSection.module.scss
@@ -31,14 +31,12 @@
       align-items: center;
       width: 300px;
       height: 50px;
-      border-radius: 4px;
+      border-radius: 3px;
       font-size: 16px;
       font-weight: 500;
       font-family: "Inter", sans-serif;
       cursor: pointer;
       transition: all 0.4s ease-in-out;
-      box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
-        rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
     }
     .topSection_button_left {
       background-color: #000;
@@ -46,7 +44,6 @@
       border: 1px solid #eaeaea;
       &:hover {
         background-color: rgb(245, 245, 245);
-        border: 1px solid #000;
         color: #000;
       }
     }
@@ -56,7 +53,7 @@
       border: 1px solid #eaeaea;
       &:hover {
         background-color: rgb(245, 245, 245);
-        border: 1px solid #000;
+        color: #000;
       }
     }
   }
