chaing color of text

--- a/components/advanceFrontend/AdvanceFrontEnd.module.scss
+++ b/components/advanceFrontend/AdvanceFrontEnd.module.scss
@@ -4,6 +4,7 @@
   margin: 0px auto;
   overflow-x: hidden;
   overflow-y: scroll;
+  color: #000;
   height: calc(100vh - 80px);
   scrollbar-width: none;
   &::-webkit-scrollbar {
