--- a/components/topCodingQuestions/TopCodingQuestion.module.scss
+++ b/components/topCodingQuestions/TopCodingQuestion.module.scss
@@ -1,33 +1,127 @@
-.frontEndCodingQuestions__container {
-  width: 800px;
-  margin: 52px auto;
+.coding {
+  width: 100%;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  gap: 52px;
-  .frontEndCodingQuestions__container__loader {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  .coding__stated_page {
+    max-width: 800px;
     width: 100%;
-    height: 50vh;
-  }
-  .frontEndCodingQuestions__container__questions {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    .frontEndCodingQuestions__container__questions__question {
-      font-size: 24px;
-      font-weight: 600;
-      color: #000;
-      font-family: "Roboto";
+    padding: 32px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+      display: none;
     }
-    .frontEndCodingQuestions__container__questions__answer {
-      line-height: 1.65;
+    .coding_header {
+      margin-top: 12px;
+      .coding_header__title {
+        font-family: "Roboto", sans-serif;
+        font-size: 36px;
+        font-weight: 600;
+        color: #000;
+        text-align: center;
+      }
+      .coding_header__description {
+        font-family: "Inter", sans-serif;
+        font-size: 16px;
+        font-weight: 400;
+        color: #000;
+        margin-top: 8px;
+        text-align: center;
+      }
+    }
+  }
+  .coding__container {
+    .coding__container_top {
+      margin-top: 52px;
+      display: flex;
+      align-items: center;
+      gap: 42px;
+      justify-content: space-between;
+      .coding__container_top_left,
+      .coding__container_top_right {
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+        border-radius: 4px;
+        flex: 1;
+        height: 230px;
+        padding: 24px;
+        .coding__container_top_left__title,
+        .coding__container_top_right__title {
+          font-family: "Inter", sans-serif;
+          font-size: 24px;
+          font-weight: 600;
+          color: #000;
+        }
+        .coding__container_top_left__description,
+        .coding__container_top_right__description {
+          font-family: "Inter", sans-serif;
+          font-size: 16px;
+          font-weight: 400;
+          color: #000;
+          margin: 16px 0px;
+        }
+        .coding__container_top_left__button {
+          width: 160px;
+          height: 40px;
+          border-radius: 4px;
+          border: none;
+          margin-top: 16px;
+          font-family: "Inter", sans-serif;
+          font-size: 16px;
+          font-weight: 500;
+          cursor: pointer;
+          background: #4caf50;
+          color: #fff;
+        }
+        .coding__container_top_right__button {
+          width: 160px;
+          height: 40px;
+          border-radius: 4px;
+          border: none;
+          margin-top: 16px;
+          font-family: "Inter", sans-serif;
+          font-size: 16px;
+          font-weight: 500;
+          cursor: pointer;
+          background: #f44336;
+          color: #fff;
+        }
+      }
+    }
+    .coding__container_item__title {
+      font-family: "Roboto", sans-serif;
+      font-size: 32px;
+      font-weight: 500;
+      color: #333;
+      margin-top: 52px;
+    }
+    .coding__container_item__description {
+      font-family: "Inter", sans-serif;
       font-size: 16px;
       font-weight: 400;
-      direction: ltr;
-      font-feature-settings: "kern";
-      font-family: "Inter", sans-serif;
+      color: #333;
+      margin-top: 16px;
+      .coding__container_item__description__list {
+        margin-top: 16px;
+        .coding__container_item__description__list__item {
+          margin-left: 24px;
+          font-family: "Inter", sans-serif;
+          margin-top: 8px;
+        }
+      }
+    }
+  }
+  .coding__container_conclusion {
+    margin-top: 90px;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: "Inter", sans-serif;
+    color: #333;
+    .coding__container_conclusion__title {
+      font-size: 24px;
+      font-weight: 500;
+      font-family: "Roboto", sans-serif;
+      margin-bottom: 12px;
     }
   }
 }
