--- a/components/dashboard/featuredQuestions/FeaturedQuestions.module.scss
+++ b/components/dashboard/featuredQuestions/FeaturedQuestions.module.scss
@@ -6,6 +6,40 @@
   justify-content: center;
   gap: 32px;
   background: #ffffff;
+  .design {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    .line {
+      width: 1px;
+      height: 100px;
+      background: linear-gradient(180deg, #1bffff, #2e3192);
+    }
+    .circle {
+      font-size: 16px;
+      font-weight: 600;
+      font-family: "Roboto", sans-serif;
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
+      background: linear-gradient(-90deg, #2e3192, #29f4f4);
+    }
+    .title {
+      font-size: 20px;
+      font-weight: 600;
+      font-family: "Roboto", sans-serif;
+      color: #000;
+      margin: 16px 0px;
+      background: linear-gradient(-90deg, #2e3192, #1bffff);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+  }
   .featuredQuestions_box {
     display: flex;
     align-items: center;
