--- a/components/dashboard/featuredQuestions/FeaturedQuestions.module.scss
+++ b/components/dashboard/featuredQuestions/FeaturedQuestions.module.scss
@@ -14,7 +14,7 @@
     .line {
       width: 1px;
       height: 100px;
-      background: linear-gradient(180deg, #1bffff, #2e3192);
+      background: linear-gradient(180deg, #6dd5ed, #2193b0);
     }
     .circle {
       font-size: 16px;
@@ -27,7 +27,7 @@
       width: 32px;
       height: 32px;
       border-radius: 50%;
-      background: linear-gradient(-90deg, #2e3192, #29f4f4);
+      background: linear-gradient(-90deg, #6dd5ed, #2193b0);
     }
     .title {
       font-size: 20px;
@@ -35,61 +35,90 @@
       font-family: "Roboto", sans-serif;
       color: #000;
       margin: 16px 0px;
-      background: linear-gradient(-90deg, #2e3192, #1bffff);
+      background: linear-gradient(-90deg, #6dd5ed, #2193b0);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
   }
-  .featuredQuestions_box {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 32px;
-    .featuredQuestions_left_box {
-      display: flex;
-    }
-    .featuredQuestions_right_box {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      gap: 32px;
-    }
-  }
-  .featuredQuestions_bottom {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 32px;
-    .featuredQuestions_bottom_left {
+  .featuredQuestions_grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    row-gap: 32px;
+    column-gap: 32px;
+    .featuredQuestions_grid_item {
+      border-radius: 4px;
+      padding: 24px;
+      box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+      transition: all 0.2s ease-in-out;
+      &:hover {
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        transform: scale(1.004);
+      }
+      height: 310px;
+      width: 100%;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
+      align-items: center;
+      gap: 12px;
+      justify-content: center;
+      .featuredQuestions_grid_item_title {
+        font-size: 42px;
+        font-weight: 800;
+        color: #000;
+        font-family: "Roboto", sans-serif;
+      }
+      .featuredQuestions_grid_item_description {
+        font-size: 22px;
+        font-weight: 400;
+        color: #666;
+        font-family: "Inter", sans-serif;
+        text-align: center;
+      }
+      .featuredQuestions_grid_item_button {
+        margin-top: 0px;
+        padding: 16px 42px;
+        border-radius: 4px;
+        font-size: 15px;
+        font-weight: 500;
+        background: #202123;
+        color: #fff;
+        cursor: pointer;
+        font-family: "Inter", sans-serif;
+        transition: all 0.2s ease-in-out;
+        &:hover {
+          background: #1a1a1d;
+        }
+      }
+    }
+    .featuredQuestions_grid_item_1 {
+      grid-column: 1 / 2;
+      grid-row: 1 / 3;
+      height: 650px;
       gap: 32px;
+      .featuredQuestions_grid_item_button {
+        margin-top: 32px;
+      }
+    }
+    .featuredQuestions_grid_item_5 {
+      grid-column: 1 span;
+      grid-row: 3 span;
+      height: 650px;
+      gap: 32px;
+      .featuredQuestions_grid_item_button {
+        margin-top: 32px;
+      }
     }
   }
 }
 
 @media screen and (max-width: 768px) {
   .featuredQuestions {
-    .featuredQuestions_box {
-      flex-direction: column;
-      width: 100%;
-      .featuredQuestions_left_box {
-        flex-direction: column;
-        width: 100%;
-      }
-      .featuredQuestions_right_box {
-        flex-direction: column;
-        width: 100%;
-      }
-    }
-    .featuredQuestions_bottom {
-      flex-direction: column;
-      width: 100%;
-      .featuredQuestions_bottom_left {
-        flex-direction: column;
-        width: 100%;
-      }
+    padding: 0px 16px;
+    max-width: 500px;
+    .featuredQuestions_grid {
+      grid-template-columns: repeat(1, 1fr);
+      grid-template-rows: repeat(1, 1fr);
     }
   }
 }
