--- a/components/dashboard/featureMachineCoding/MachineCodingList.module.scss
+++ b/components/dashboard/featureMachineCoding/MachineCodingList.module.scss
@@ -49,7 +49,6 @@
       width: 480px;
       height: auto;
       background-color: #fff;
-      border-radius: 8px;
       border-radius: 4px;
       box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
       transition: all 0.2s ease-in-out;
@@ -57,70 +56,41 @@
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
         transform: scale(1.004);
       }
-      padding: 16px;
       cursor: pointer;
       display: flex;
       flex-direction: column;
-      gap: 32px;
       justify-content: space-between;
       .machineCodingList__container__list__item__question {
         font-size: 16px;
         font-weight: 400;
         color: #333;
         font-family: "Inter", sans-serif;
-        margin-bottom: 8px;
+        margin-bottom: 12px;
+        padding: 0px 16px;
+        padding-top: 16px;
+      }
+      .machineCodingList__container__list__item__tech {
+        padding: 0px 16px;
+        padding-bottom: 16px;
+        .machineCodingList__container__list__item__tech__item {
+          display: inline-block;
+          padding: 6px 12px;
+          border-radius: 4px;
+          background-color: #eaeaea;
+          font-size: 12px;
+          font-weight: 400;
+          color: #666;
+          font-family: "Inter", sans-serif;
+          margin-right: 8px;
+          margin-bottom: 8px;
+          &:hover {
+            background-color: #d6d6d6;
+          }
+        }
       }
     }
   }
-  .machineCodingList__container__list__item__language {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-  }
 }
-.design {
-  margin-top: 150px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  .line {
-    width: 1px;
-    height: 100px;
-    background: linear-gradient(180deg, #f9d004, #ff4e50);
-  }
-  .circle {
-    font-size: 16px;
-    font-weight: 600;
-    font-family: "Roboto", sans-serif;
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    background: linear-gradient(-90deg, #ff4e50, #f9d004);
-  }
-  .title {
-    font-size: 20px;
-    font-weight: 600;
-    font-family: "Roboto", sans-serif;
-    color: #000;
-    margin: 16px 0px;
-    background: linear-gradient(90deg, #f9d423 0%, #ff4e50 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-}
-.machineCodingList__container__list__item__img {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 @media screen and (max-width: 800px) {
   .machineCodingList__container {
     padding: 0px 16px;
