--- a/components/dashboard/topSection/TopSection.module.scss
+++ b/components/dashboard/topSection/TopSection.module.scss
@@ -19,6 +19,7 @@
   .topSection_description {
     font-size: 20px;
     font-weight: 400;
+    line-height: 1.3;
     text-align: center;
     font-family: "Inter", sans-serif;
     color: #666;
@@ -53,10 +54,9 @@
     .topSection_button_right {
       background-color: #fff;
       color: #000;
-      border: 1px solid #eaeaea;
+      box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
       &:hover {
-        background-color: rgb(245, 245, 245);
-        color: #000;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
       }
     }
   }
